<resources>
    <string name="app_name">Physhome</string>
    <string name="exercise">EXERCISE</string>
    <string name="treatment">TREATMENT</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="settings">SETTINGS</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="selected">Selected:</string>
    <string name="select_device">Select Device</string>
    <string name="drug">Drug</string>
    <string name="disorder">Disorder:</string>
    <string name="comment">Comment:</string>
    <string name="doctor_name">Doctor\'s Name:</string>
    <string name="hospital">Hospital:</string>
    <string name="drugs">Drugs</string>
    <string name="treatment_information">Treatment Information</string>
    <string name="treatment_history">Treatment History</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="completed_exercises">Completed Exercises</string>
    <string name="name_surname">Name Surname:</string>
    <string name="address">Address:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone">Phone</string>
    <string name="age">Age:</string>
    <string name="blood_type">Blood Type:</string>
    <string name="height">Height:</string>
    <string name="fall_sensor">FALL SENSOR</string>
    <string name="active">Active</string>
    <string name="first_relative">1. Relative:</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="address_hint">Address</string>
    <string name="name_surname_hint">Name Surname</string>
    <string name="second_relative">2. Relative:</string>
    <string name="emergency">112</string>
    <string name="reach_emergency">Reach 112</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="progress">Progress</string>
    <string name="app_name_capital">PHYSHOME</string>
    <string name="login">LOG IN</string>
    <string name="password">Password</string>
    <string name="signup">SIGN UP</string>
    <string name="i_do_not_have_any_account">I do not have any account</string>
    <string name="start">Start</string>
    <string name="bluetooth1">BT1</string>
    <string name="bluetooth2">BT2</string>
    <string name="bluetooth3">BT3</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_enabled">Reminder is enabled</string>
    <string name="reminder_disabled">Reminder is disabled</string>
    <string name="all">All</string>
    <string name="sms_sent">Sms sent</string>
    <string name="sms_general_error">Sms General Error</string>
    <string name="sms_no_service">Sms No Service</string>
    <string name="sms_null_pdu">Sms Null Pdu</string>
    <string name="sms_radio_off">Sms Radio Off</string>
    <string name="sms_delivered">Sms Delivered</string>
    <string name="sms_not_delivered">Sms Not Delivered</string>
    <string name="permission_cancelled">Permission Cancelled</string>
    <string name="are_you_ok">Are you OK?</string>
    <string name="i_need_help">I need Help!</string>
    <string name="i_am_ok">I am OK!</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="today">Today</string>
    <string name="breaking_connection">Breaking connection...</string>
    <string name="bluetooth_not_support">Bluetooth not support</string>
    <string name="bluetooth_on">...Bluetooth ON...</string>
    <string name="connecting">Connecting...</string>
    <string name="is_selected">is selected</string>
    <string name="exercise_list">Exercise List</string>
    <string name="total">Total</string>
    <string name="successful">Successful</string>
    <string name="changes_are_saved">Changes are saved!</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="cm">cm</string>
    <string name="ab_positive">AB+</string>
    <string name="xx">XX</string>
    <string name="no_internet_connection">You do not have internet connection!</string>
    <string name="test">Test</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="years">years</string>
    <string name="years_old">years</string>
    <string name="pick_date">Pick Date</string>
    <string name="date_should_be_in_this_interval">Date should be in this interval:</string>
    <string name="day">day</string>
    <string name="weight_lifting">Weight Lifting</string>
    <string name="leg_stretching">Leg Stretching</string>
    <string name="squat">Squat</string>
    <string name="after_meal">after meal</string>
    <string name="before_meal">before meal</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bt_connection_problem">Bluetooth connection problem</string>
    <string name="leg_lift">Leg lift</string>
    <string name="complete_selection">Complete Selection</string>
    <string name="select_an_exercise">Select an exercise</string>
    <string name="target">Target:</string>
    <string name="completed">Completed</string>
    <string name="triceps">Triceps</string>
    <string name="knee_extension">Knee Extension</string>
    <string name="shoulder_flexion">Shoulder Flexion</string>
    <string name="back_skapula_adduction">Back Skapula Adduction</string>
    <string name="arms_stretcing_while_lying">Arms Stretching While Lying</string>
    <string name="bt_device_is_disconnected">Bluetooth device is disconnected</string>
    <string name="shoulder_elevation">Shoulder Elevation</string>
    <string name="shoulder_horizontal_abduction">Shoulder Horizontal Abduction</string>
    <string name="info_true">currect</string>
    <string name="info_false">wrong</string>
    <string name="info_slow">SLOW</string>
    <string name="info_fast">FAST</string>
    <string name="info_unstable">IRREGULAR</string>
    <string name="info_lower_chest">LEAN FORWARD</string>
    <string name="info_upper_chest">STAND UPRIGHT</string>
    <string name="info_start">START</string>
    <string name="faq">FAQ</string>
    <string name="analytics">ANALYTICS</string>
    <string name="amount">Amount:</string>
    <string name="old_treatments">Old Treatments</string>
    <string name="question_initial">Q</string>
    <string name="answer_initial">A</string>
    <string name="repeat">repeat</string>
    <string name="days">days</string>
    <string name="frequently_asked_questions_and_answers">Frequently Asked Qustions and Answers</string>
    <string name="set_alarm_for_drugs">Set alarm for drugs</string>
    <string name="edit_my_devices">Edit my devices</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="about">About</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="website">Website</string>
    <string name="to_finish_the_exercise">to finish the exercise</string>
    <string name="only">Only</string>
    <string name="left">left</string>
    <string name="lets_start">Let\'s start!</string>
    <string name="monday_initial">M</string>
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="sunday_initial">S</string>
    <string name="select_a_drug">--Select a drug--</string>
    <string name="alarm_is_set">Alarm is set</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="correct_movement">Correct Movement</string>
    <string name="normal_movement">Normal</string>
    <string name="fast_movement">Fast</string>
    <string name="slow_movement">Slow</string>
    <string name="wrong_movement">Wrong Movement</string>
    <string name="ok">OK</string>
    <string name="rate_the_difficulty_level_from_0_to_10">Rate the difficulty level from 0 to 10.</string>
    <string name="exercise_summary">Exercise Summary</string>
    <string name="success_rate">success rate</string>
    <string name="passing_time">Passing Time</string>
    <string name="total_movement">Total Movement</string>
    <string name="Difficulty">Difficulty</string>
    <string name="stop_exercise">Stop Exercise</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="limb_error">Limb Error</string>
    <string name="chest_error">Chest Error</string>
    <string name="limb_and_chest_error"><![CDATA[Limb & Chest Error]]></string>
    <string name="there_is_not_any_activity">There is not any activity.</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="connection_problem_trying_to_connect">Connection problem. Trying to connect...</string>
    <string name="limb_device">Limb Device</string>
    <string name="chest_device">Chest Device</string>
    <string name="scanning">Scanning...</string>
    <string name="higher_android_version_warning">It requires higher android version!</string>
    <string name="no_device">No Device</string>
    <string name="bt_request_not_accepted">You should accept to discover your devices!</string>
    <string name="loading">Loading</string>
    <string name="done">done</string>
    <string name="success_ratio">Success Ratio</string>
    <string name="time_min">Time(min)</string>
    <string name="speed_chart">Speed Chart</string>
    <string name="error_chart">Error Chart</string>
    <string name="no_data">No data</string>
    <string name="both_devices_are_paired">Both devices are paired!</string>
    <string name="directing_to_bt_settings">You are directing to Bluetooth Settings Page to pair your devices!</string>
    <string name="bt_need_to_charge">Check the devices working or not. If there is no light, you need to charge it.</string>
    <string name="continue_to_unsaved">Would you like to continue to the unsaved exercise?</string>
    <string name="info_false_limb">limb error</string>
    <string name="info_false_chest">chest error</string>
    <string name="limb">LIMB</string>
    <string name="chest">CHEST</string>
    <string name="speed">SPEED</string>
    <string name="stop_record">Stop Record</string>
    <string name="start_record">Start Record</string>
    <string name="problem">Problem</string>
    <string name="doctor_comment">Doctor\'s comment</string>
    <string name="no_activity_for_this_day">No activity for this day!</string>
    <string name="ignore">Ignore</string>
    <string name="continue_to_exercise">Would you like to continue to do exercise?</string>
    <string name="no_finish_exercise">No, stop exercise!</string>
    <string name="yes_continue">Yes, continue!</string>
    <!-- Translate edildi-->
</resources>
