<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/physhome2"
            app:civ_border_width="3dp"
            app:civ_border_color="@color/colorPhyshome"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/profile_edit_profile_iv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/name_surname"
                android:textColor="@color/colorPhyshome"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_name_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_surname_hint"
                android:inputType="textPersonName"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_age"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/age"
                android:textColor="@color/colorPhyshome"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_age_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/xx"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_height"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/height"
                android:textColor="@color/colorPhyshome"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_height_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/cm"
                android:inputType="numberDecimal"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background_normal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_blood"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center_vertical"
                android:text="@string/blood_type"
                android:textColor="@color/colorPhyshome"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/profile_blood_et"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ab_positive"
                android:inputType="text"
                android:textSize="16sp" />
        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/blueround_bg"
            android:text="@string/save_changes"
            android:textColor="#fff"
            android:textSize="16sp"
            android:id="@+id/profile_save_button"/>

    </LinearLayout>
</ScrollView>