<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.physhome.physhome.SettingsActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/set_alarm_for_drugs"
        android:textColor="@color/colorBlackTransparent"
        android:drawableRight="@drawable/ic_action_alarm"
        android:id="@+id/settings_alarm_tv"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/edit_my_profile"
        android:drawableRight="@drawable/ic_action_profile"
        android:id="@+id/settings_profile_tv"
        android:textColor="@color/colorBlackTransparent"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/edit_my_devices"
        android:drawableRight="@drawable/ic_action_bt"
        android:textColor="@color/colorBlackTransparent"
        android:id="@+id/settings_bt_tv"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/frequently_asked_questions"
        android:drawableRight="@drawable/ic_action_help"
        android:textColor="@color/colorBlackTransparent"
        android:id="@+id/settings_faq_tv"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/website"
        android:drawableRight="@drawable/ic_action_website"
        android:id="@+id/settings_website_tv"
        android:textColor="@color/colorBlackTransparent"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/logout"
        android:drawableRight="@drawable/ic_action_logout"
        android:id="@+id/settings_logout_tv"
        android:textColor="@color/colorBlackTransparent"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGrayTransparent"/>
</LinearLayout>