<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:local="http://schemas.android.com/apk/res-auto"
    tools:context="com.physhome.physhome.MainActivity"
    android:background="#fff">
    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#fff"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical">
            <TextView
                android:id="@+id/main_settings_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorBlueGreen"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/settings"
                android:layout_marginRight="10dp"
                android:textStyle="bold"
                android:layout_alignTop="@+id/main_settings_iv"
                android:layout_alignBottom="@+id/main_settings_iv" />
            <ImageView
                android:id="@+id/main_settings_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/main_settings_tv"
                android:layout_toStartOf="@+id/main_settings_tv"
                local:srcCompat="@android:drawable/ic_menu_manage"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:layout_alignBottom="@+id/main_logout_tv" />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@+id/main_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/colorful_bg"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/main_achievements_button"
        android:layout_marginBottom="20dp"
        android:id="@+id/linearLayout2">
        <ImageView
            android:id="@+id/main_edit_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            local:srcCompat="@android:drawable/ic_menu_edit" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/physhome_round_bg"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:id="@+id/main_profile_iv"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Meliksah Cakir"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#B0000000"
            android:id="@+id/main_name_tv"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:weightSum="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar"
                android:layout_gravity="center"
                android:layout_weight="0.13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/age"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:id="@+id/main_age_tv"
                android:layout_weight="0.2"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_ruler"
                android:layout_weight="0.13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/height"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/main_height_tv"
                android:layout_weight="0.2" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_drop"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.13"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="AB+"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:id="@+id/main_blood_tv"
                android:layout_weight="0.2"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/treatment_bg"
        android:id="@+id/main_treatment_button"
        android:layout_toLeftOf="@+id/main_faq_button"
        android:layout_toStartOf="@+id/main_faq_button"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_alignBottom="@+id/main_faq_button"
        android:text="@string/treatment"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"/>

    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/faq_bg"
        android:id="@+id/main_faq_button"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/faq"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/analytics_bg"
        android:id="@+id/main_analytics_button"
        android:layout_toRightOf="@+id/main_faq_button"
        android:layout_toEndOf="@+id/main_faq_button"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignBottom="@+id/main_faq_button"
        android:text="@string/analytics"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"
        />
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/achievements_bg"
        android:id="@+id/main_achievements_button"
        android:layout_above="@+id/main_faq_button"
        android:layout_toRightOf="@+id/main_treatment_button"
        android:layout_toEndOf="@+id/main_treatment_button"
        android:layout_marginBottom="20dp"
        android:text="@string/achievements"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"/>
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/exercise_bg"
        android:id="@+id/main_exercise_button"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/main_treatment_button"
        android:layout_alignStart="@+id/main_treatment_button"
        android:text="@string/exercise"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"/>
    <TextView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:background="@drawable/notifications_bg"
        android:id="@+id/main_notifications_button"
        android:layout_alignLeft="@+id/main_analytics_button"
        android:layout_alignStart="@+id/main_analytics_button"
        android:layout_alignBottom="@+id/main_achievements_button"
        android:text="@string/notifications"
        android:gravity="center_horizontal|bottom"
        android:textStyle="bold"
        android:textColor="@color/colorLauncherText"
        android:textSize="10sp"
        android:paddingBottom="10dp"/>
</RelativeLayout>
