<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile_bg">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="190dp"
        android:src="@drawable/physhome3"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    <LinearLayout
        android:gravity="top|bottom|start|end|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingStart="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/et_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:drawableLeft="@drawable/ic_action_phone"
            android:drawableStart="@drawable/ic_action_phone"
            android:inputType="phone"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background_normal">
        </EditText>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="10dp"
            app:passwordToggleTint="@color/colorPhyshome">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:drawableLeft="@drawable/ic_action_password"
                android:drawableStart="@drawable/ic_action_password"
                android:background="@android:drawable/editbox_background_normal"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/blueround_bg"
            android:text="@string/login"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>